FEATURE - finish beta home page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,11 +8,10 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
- *= require_self
- *= require master
- *= require adapt
- *= require overrides
+ *= require bootstrap
+ *= require bootstrap-responsive
+ *= require lib/nivo-slider
+ *= require docs
+ *= require global
  *= require home
- *= require new_bbs
- *= require topics
  */
