FEATURE - add sign up page

--- a/app/views/application/_header.html.haml
+++ b/app/views/application/_header.html.haml
@@ -15,7 +15,7 @@
           %li= link_to '应用', '#'
           %li= link_to '专题', '#'
           %li= link_to '下载', '#'
-          %li= link_to '论坛', '#'
+          %li= link_to '论坛', bbs_root_path
 
         = form_tag '/', class: 'navbar-search pull-left form-search' do
           .input-append
@@ -23,5 +23,5 @@
             = button_tag '搜索', class: 'btn btn-inverse'
 
         %ul.nav.pull-right
-          %li= link_to t('views.layout.sign_up').html_safe, '#', class: 'signup'
-          %li= link_to '登录', '#'
+          %li= link_to t('views.layout.sign_up').html_safe, new_user_registration_path, class: 'signup'
+          %li= link_to '登录', new_user_session_path
