--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -14,7 +14,7 @@ section {
 
           ul.state_bar {
             list-style: none;
-            margin: 0 0 10px 5px;
+            margin: 0 0 0 5px;
             border-top: 1px dashed #eee;
 
             li {
