--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -34,3 +34,7 @@ section {
 ul.media-list {
   li.media { padding-bottom: 5px; border-bottom: 1px dashed #eee; }
 }
+
+ul.bs-docs-social-buttons {
+  a.auth img { margin-top: -20px; }
+}
