--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -8,15 +8,10 @@
 
       = simple_form_for resource, as: resource_name, url: registration_path(resource_name), validate: true, html: { class: 'form-horizontal' } do |f|
         = f.input :name
-        = f.input :username
         = f.input :email
         = f.input :password
         = f.input :password_confirmation
 
         .form-actions
           = f.button :submit, '提交帐户信息', class: 'btn btn-success btn-large'
-  .span3
-    .page-header
-      %h1 第三方账户登录
-    %ul.auth
-      %li= link_to image_tag('weibo-login-btn-medium.png'), '#'
+  = render '/application/sidebars/auth'
