--- a/app/views/home/_social.html.haml
+++ b/app/views/home/_social.html.haml
@@ -1,7 +1,9 @@
 .bs-docs-social
   .container
     %ul.bs-docs-social-buttons
+      %li= link_to image_tag('weibo-login-btn-medium.png'), '#', class: 'auth'
       %li
         <wb:follow-button uid="2991975565" type="red_2" width="136" height="24" ></wb:follow-button>
+      %li= link_to image_tag('qq-login-btn-medium.png'), '#', class: 'auth'
       %li
         <iframe src="http://follow.v.t.qq.com/index.php?c=follow&a=quick&name=jerryshen&style=4&t=1357190078065&f=1" marginwidth="0" marginheight="0" allowtransparency="true" frameborder="0" height="27" scrolling="auto" width="182"></iframe>
