--- a/app/views/application/tabs/_settings.html.haml
+++ b/app/views/application/tabs/_settings.html.haml
@@ -1,5 +1,5 @@
-%ul.tabs
-  = settings_link_to '基本资料', edit_profile_path
-  = settings_link_to '密码设置', edit_user_registration_path
-  = settings_link_to '第三方帐号绑定', '#'
-  = settings_link_to '提醒设置', my_notificaitons_path
+%ul.nav.nav-tabs
+  = settings_link_to '个人设置', edit_user_registration_path(type: :profile)
+  = settings_link_to '密码设置', edit_user_registration_path(type: :password)
+  = settings_link_to '第三方账户绑定', authentications_path
+  = settings_link_to '邀请好友', '#'
