--- a/app/views/bbs/home/index.html.haml
+++ b/app/views/bbs/home/index.html.haml
@@ -1,32 +1,61 @@
-- content_for :full do
-  .full.home_banner
-    %h1.compact
-      %strong 如果你还没有注册成为吞迷，
-      又怎么能称的上游戏达人呢？
+- content_for :jumbotron do
+  .jumbotron.masthead.home
+    .container
+      %p
+        在论坛您可以和玩家进行交流，晒自己的极品装备
+        = link_to '马上成为吞迷', new_user_registration_path, class: 'btn btn-primary'
 
-- content_for :sidebar do
-  = render '/application/sidebars/bbs'
 
-#recommended_wrap
+.row
+  .span9
+    %section#bbs-boards
+      .page-header
+        %h1
+          %i.icon-list
+          吞食天地2ND
+          %small 吞食天地2ND主板块信息，论坛板块信息，大家都想一下方案如何写
+      %ul.thumbnails
+        - 3.times do
+          %li
+            .thumbnail
+              = link_to '#' do
+                %img{:alt => "", "data-src" => "holder.js/300x174"}
+              .caption
+                %h3= link_to '吞食天地2nd Evolution 进化', '#'
+                %p.desc 在本作中玩家扮演刘备，从第一章“黄巾之乱”开始，一直到最后篡改历史一统天下，总共分为八章。
+                %ul.state_bar.clearfix
+                  %li
+                    话题：
+                    %span 200个
+                  %li
+                    精华：
+                    %span 10个
+                  %li
+                    回复：
+                    %span 29001个
+                  %li= link_to t('views.layout.topic_detail').html_safe, '#'
+  = render 'sidebar'
 
-#forum-wrap
-  - @main_boards.each do |board|
-    .forum
-      .forum-header.group
-        %h2
-          主板块：
-          = board.name
-        %p xxxxxx
-      .forum-list
-        %p.notice 本板块的最新消息，我们马上要出最新的版本了。希望大家踊跃参与。
-        - board.children.each do |child|
-          .child-board.group
-            .head_img= image_tag('examples/02.jpg')
-            %h3= link_to child.name, bbs_board_path(child)
-            %p.description= child.description
-            %p
-              %span.admin
-                版主：
-                = link_to '西唯', '#'
-              %span.topics
-                总帖数/精华帖：0 / 0
+/ #recommended_wrap
+
+/ #forum-wrap
+/   - @main_boards.each do |board|
+/     .forum
+/       .forum-header.group
+/         %h2
+/           主板块：
+/           = board.name
+/         %p xxxxxx
+/       .forum-list
+/         %p.notice 本板块的最新消息，我们马上要出最新的版本了。希望大家踊跃参与。
+/         - board.children.each do |child|
+/           .child-board.group
+/             .head_img= image_tag('examples/02.jpg')
+/             %h3= link_to child.name, bbs_board_path(child)
+/             %p.description= child.description
+/             %p
+/               %span.admin
+/                 版主：
+/                 = link_to '西唯', '#'
+/               %span.topics
+/                 总帖数/精华帖：0 / 0
