--- a/app/views/application/_header.html.haml
+++ b/app/views/application/_header.html.haml
@@ -16,7 +16,7 @@
           %li= link_to '专题', '#'
           %li= link_to '下载', '#'
           = main_nav :bbs do
-            %li= link_to '论坛', bbs_root_path
+            = link_to '社区', bbs_root_path
 
         = form_tag '/', class: 'navbar-search pull-left form-search' do
           .input-append
