--- a/app/views/bbs/boards/show.html.haml
+++ b/app/views/bbs/boards/show.html.haml
@@ -1,12 +1,64 @@
-- content_for :full do
-  .full.home_banner
-    %h1.compact
-      %strong 如果你还没有注册成为吞迷，
-      又怎么能称的上游戏达人呢？
+- content_for :jumbotron do
+  .jumbotron.masthead.home
+    .container
+      %p
+        在论坛您可以和玩家进行交流，晒自己的极品装备
+        = link_to '马上成为吞迷', new_user_registration_path, class: 'btn btn-primary'
 
-- content_for :sidebar do
-  = link_to new_bbs_board_post_path(resource), class: 'form-sub share' do
-    发  帖
-    %br/
-    %em 分享游戏心得
-  = render '/application/sidebars/bbs'
+.row
+  .span9
+    %section#bbs-boards
+      %ul.breadcrumb
+        %li
+          = link_to '社区', bbs_root_path
+          %span.divider /
+        %li
+          = link_to resource.parent.name, bbs_root_path
+          %span.divider /
+        %li.active
+          = resource.name
+        %li.last
+          %span.badge.badge-inverse
+            200篇帖子
+
+      %ul.media-list
+        - 10.times do
+          %li.media.topic
+            = link_to '#', class: 'pull-left' do
+              %img.media-object{ data: { src: 'holder.js/48x48' } }
+            .media-body
+              %h4.media-heading
+                = link_to '这个游戏怎么玩啊，装备打起来好难啊。。。'
+              %ul.state-bar.clearfix
+                %li= link_to t('views.layout.comments', count: 100).html_safe, '#'
+                %li= link_to t('views.layout.likes', count: 30).html_safe, '#'
+
+              %p.meta
+                = link_to '西唯-Jerry', '#'
+                发布于
+                3小时前
+                %span.divider-vertical
+                最后回复来自于
+                = link_to '你奶奶的爷爷', '#'
+
+  .span3
+    = link_to t('views.layout.add_new_post').html_safe, new_bbs_board_post_path(resource), class: 'btn btn-primary btn-large', id: 'add-new-post'
+
+    .box
+      - if user_signed_in?
+        %ul.media-list
+          %li.media
+            = link_to '#', class: 'pull-left' do
+              %img{:alt => "", "data-src" => "holder.js/80x80"}
+            %h4.media-heading
+              = current_user.name
+            .media-body
+              当前论坛积分： 1000
+          %li.media
+            %ul.nav.nav-pills
+              %li.active= link_to '100<br/>话题'.html_safe, '#'
+              %li.active= link_to '10<br/>粉丝'.html_safe, '#'
+              %li.active= link_to '9<br/>关注'.html_safe, '#'
+          %li.media.notifications
+            %p.muted 您有一篇文章被回复了
+            %p.muted 您有一篇文章被回复了
