--- a/app/views/application/_footer.html.haml
+++ b/app/views/application/_footer.html.haml
@@ -1,29 +1,15 @@
 %footer.footer
   .container
     %p
-      Designed and built with all the love in the world by
-      %a{:href => "http://twitter.com/mdo", :target => "_blank"} @mdo
-      and
-      = succeed "." do
-        %a{:href => "http://twitter.com/fat", :target => "_blank"} @fat
-    %p
-      Code licensed under
-      = succeed "," do
-        %a{:href => "http://www.apache.org/licenses/LICENSE-2.0", :target => "_blank"} Apache License v2.0
-      documentation under
-      = succeed "." do
-        %a{:href => "http://creativecommons.org/licenses/by/3.0/"} CC BY 3.0
-    %p
-      %a{:href => "http://glyphicons.com"} Glyphicons Free
-      licensed under
-      = succeed "." do
-        %a{:href => "http://creativecommons.org/licenses/by/3.0/"} CC BY 3.0
+      晴天之秀团队运维
+      = link_to '@西唯-Jerry', '#'
+    %p Copyright © 2013 吞食天地大同盟 twkunion.com  
+    %p 备案号: 沪ICP备XXXX
     %ul.footer-links
-      %li
-        %a{:href => "http://blog.getbootstrap.com"} Blog
+      %li= link_to '关于我们', '#'
       %li.muted ·
-      %li
-        %a{:href => "https://github.com/twitter/bootstrap/issues?state=open"} Issues
+      %li= link_to '联系我们', '#'
       %li.muted ·
-      %li
-        %a{:href => "https://github.com/twitter/bootstrap/wiki"} Roadmap and changelog
+      %li= link_to '团队博客', '#'
+      %li.muted .
+      %li= link_to '网站地图', '#'
